--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -294,7 +294,7 @@ Table~\ref{table:tescombined} presents the following estimates. Column (1) gives
 
 The results for females show that ABC/CARE has substantial effects on education when comparing treatment to the next best alternative. High school graduation increases between 11 and 25 percentage points, depending on the estimate that we consider; college graduation increases between 11 and 12 percentage points; and the average years of schooling increase between 1.7 and 2.1 years. Employment at age 30 increases between 7 and 13 percentage points. It is rare for a program to have this magnitude of effect on human capital accumulation and employment. The results strengthen when we compare treatment with the alternative of staying at home.
 
-\newgeometry{top=.6in, bottom=.8in, left=.8in, right=.8in}
+\newgeometry{top=.5in, bottom=.7in, left=.55in, right=.55in}
 \begin{table}[!htbp]
 \centering
 \begin{threeparttable}
@@ -304,7 +304,7 @@ The results for females show that ABC/CARE has substantial effects on education 
 \end{scriptsize}
 \begin{tablenotes}
 \tiny
-Note: This table shows the treatment effects for categories outcomes that are important for our benefit/cost analysis. Systolic and diastolic blood pressure are measured in terms of mm Hg. Each column present estimates for the following parameters: \textbf{(1)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | W = 1]$; {\textbf{(2)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B} \big]$}; {\textbf{(3)} $\mathbb{E} \big[ \bm{Y}^1 | \bm{B}, D=1 \big] - \mathbb{E} \big[ \bm{Y}^0 | \bm{B}, V=0, D=0 \big]$}; {\textbf{(4)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, V=0 \big] $}; {\textbf{(5)} $\mathbb{E} \big[ \bm{Y}^1 | \bm{B}, D=1 \big] - \mathbb{E} \big[ \bm{Y}^0 | \bm{B}, V=1, D = 0 \big]$}; {\textbf{(6)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, V=1 \big]$}. We account for the following background variables ($\bm{B}$): Apgar scores at minutes 1 and 5 and the high-risk index. We define the high-risk index in Appendix~\ref{appendix:background} and explain how we choose the control variables in Appendix~\ref{appendix:bvariables}. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We highlight point estimates significant at the $10\%$ level. See Appendix~\ref{appendix:vsensitivity} for two-sided $p$-values.
+Note: This table shows the treatment effects for categories outcomes that are important for our benefit/cost analysis. Systolic and diastolic blood pressure are measured in terms of mm Hg. Each column present estimates for the following parameters: (1) $\mathbb{E} \left [ \bm{Y}^1 -  \bm{Y}^0 | \bm{B} \in \mathcal{B}_{0} \right]$ (no controls); (2) $\mathbb{E} \left [ \bm{Y}^1 -  \bm{Y}^0 | \bm{B} \in \mathcal{B}_{0} \right]$ (controls); (3) $\mathbb{E} \left [ \bm{Y}^1 | R = 1 \right] -  \mathbb{E} \left [ \bm{Y}^0 | R = 0,V = 0  \right]$ (no controls); (4) $\mathbb{E} \left [ \bm{Y}^1 -  \bm{Y}_H^0 | \bm{B} \in \mathcal{B}_{0} \right]$ (controls); (5) $\mathbb{E} \left [ \bm{Y}^1 | R = 1 \right] -  \mathbb{E} \left [ \bm{Y}^0 | R = 0,V = 1 \right]$ (no controls); (6) $\mathbb{E} \left [ \bm{Y}^1 -  \bm{Y}_C^0 | \bm{B} \in \mathcal{B}_{0} \right]$ (controls). We account for the following background variables ($\bm{B}$): Apgar scores at minutes 1 and 5 and the high-risk index. We define the high-risk index in Appendix~\ref{appendix:background} and explain how we choose the control variables in Appendix~\ref{appendix:bvariables}. Columns (2), (4), and (6) correct for item non-response and attrition using inverse probability weighting as we explain in Appendix~\ref{app:method_partialobs}. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We highlight point estimates significant at the $10\%$ level. See Appendix~\ref{appendix:vsensitivity} for two-sided $p$-values.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -770,11 +770,11 @@ Our evidence does not indicate that the program has no benefit for females. When
 
 \section{Summary} \label{section:conclusion}
 
-This paper studies two influential early childhood programs evaluated by the method of randomized control trials with long term follow-up through around age 35. These programs are emulated in a variety of active early childhood programs around the world. We document outcomes across multiple life domains. We find a statistically significant aggregate benefit/cost ratio of $6.3$ and a rate of return of $13.0\%$ per annum, even after adjusting for the welfare costs of financing the program through public revenue.
+This paper studies two influential early childhood programs evaluated by the method of randomized control trials with long term follow-up through around age 35. These programs are emulated in a variety of active early childhood programs around the world. We document outcomes across multiple life domains. We estimate a statistically significant aggregate benefit/cost ratio of $6.3$ and a rate of return of $13.0\%$ per annum, even after adjusting for the welfare costs of financing the program through taxation.
 
 To reach these conclusions, we address a number of empirical challenges: (a) control group substitution; (b) extrapolating lifetime benefits beyond the experimental period; and (c) the multiplicity of hypotheses tested. Our approach serves as a template for evaluations of programs with partial follow up over the life cycle.
 
-Benefits differ substantially by gender. Females have more beneficial treatment effects than males, but the monetized value of the male treatment effects is greater. There are substantial effects on health and (health-related) quality of life as well as crime for males. For females, the benefits are concentrated in education, employment, and minor crimes. The effects for females are stronger compared to the alternative of staying at home. The effects for males are stronger compared to the alternative of participation in alternative childcare arrangements. The program subsidizes maternal employment and has a strong causal effect on maternal labor income. We demonstrate the advantages of analyzing the long-term multiple benefits of these programs.
+Benefits differ substantially by gender. Females have more beneficial treatment effects than males, but the monetized value of the male treatment effects is greater. There are substantial effects on health and (health-related) quality of life as well as crime for males. For females, the benefits are concentrated in education, employment, and minor crimes. The effects for females are stronger compared to the alternative of staying at home. The effects for males are stronger compared to the alternative of participation in alternative childcare arrangements. The program subsidizes maternal employment and has a strong causal effect on maternal labor income. We demonstrate the benefits of analyzing the long-term multiple benefits of these programs.
 
 %References
 \singlespace
