update with nice table

--- a/AppOutput/Methodology/transitiontable.tex
+++ b/AppOutput/Methodology/transitiontable.tex
@@ -16,6 +16,6 @@ Physical Activ. & $\times$& $\times$&$\times$ & $\times$& $\times$& $\times$&$\t
 Binge Drinking & & & & & & &  &$\times$ & $\times$    &      &      &   &     &  \\
 \midrule
 DI Claim      & & & & &  & & & &             &         & $\times$    & $\times$   & $\times$ & $\times$\\
-SS Claim     & & & & & & & &           &         &     & $\times$ &  & $\times$& $\times$\\
+SS Claim     & & & & & & & &           &         &     & $\times$ &  & & $\times$\\
 SSI Claim   & & & & &&  & & &         &        &      & &   & $\times$\\ \bottomrule
 \end{tabular}
