--- a/Appendices/Crime.tex
+++ b/Appendices/Crime.tex
@@ -29,7 +29,7 @@
 \scriptsize \caption{Crime Categories} \label{tab:crime_cat}
 \begin{tabular}{lllll}
 \toprule
-{Our Categories}	&	{Youth Data} & {Costs of Crime} & {Nat. Arrests Data} & {Nat. Sentences Data}	\\
+{Categories}	&	{Youth Data} & {Costs of Crime} & {Nat. Arrests Data} & {Nat. Sentences Data}	\\
 \midrule
 %				&				& \cite{mccollister2010cost} 	&			&					\\ \hline
 {Arson}			&			& Arson					&	Arson			&					\\	
