--- a/heckman.bib
+++ b/heckman.bib
@@ -25303,6 +25303,20 @@
   Volume                   = {27}
 }
 
+@Article{Elixhauser_etal_1993_CBA_DC,
+  Title                    = {Cost-Benefit Analysis of Preconception Care for Women With Established Diabetes Mellitus},
+  Author                   = {Elixhauser, Anne and Weschler, Joan M. and Kitzmiller, John L. and Marks, James S. and Bennert Jr., Harry W. and Coustan, Donald R. and Gabbe, Steven G. and Herman, William H. and Kaufmann, Robert C. and Ogata, Edward S. and Sepe, Stephen J.},
+  Journal                  = {Diabetes Care},
+  Year                     = {1993},
+  Number                   = {8},
+  Pages                    = {1146--1157},
+  Volume                   = {16},
+
+  Doi                      = {http://dx.doi.org/10.2337/diacare.16.8.1146},
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.12.01}
+}
+
 @Book{Elliott_Aggoun_etal_1995_BOOKhidden,
   Title                    = {Hidden {M}arkov Models: Estimation and Control},
   Author                   = {Elliott, Robert J. and Aggoun, Lakhdar and Moore, John B.},
@@ -30672,6 +30686,19 @@
 
   Owner                    = {Jessica Dyer},
   Timestamp                = {2014.06.19}
+}
+
+@Article{Gentilello_etal_2005_CBA-Alcohol_AS,
+  Title                    = {Alcohol Interventions for Trauma Patients Treated in Emergency Departments and Hospitals: A Cost Benefit Analysis},
+  Author                   = {Gentilello, Larry M. and Ebel, Beth E. and Wickizer, Thomas M. and Salkever, David S. and Rivara, Frederick P.},
+  Journal                  = {Annals of Surgery},
+  Year                     = {2005},
+  Number                   = {4},
+  Pages                    = {541--550},
+  Volume                   = {241},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.12.01}
 }
 
 @Electronic{Georgia_2015_Bright-From-Start,
@@ -45201,6 +45228,19 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Url                      = {http://www.jstor.org/stable/1833078}
 }
 
+@Article{Jozaghi_etal_2014_CBA_SATPaP,
+  Title                    = {A Cost-Benefit/Cost-Effectiveness Analysis of Proposed Supervised Injection Facilities in {O}ttawa, {C}anada},
+  Author                   = {Jozaghi, Ehsan and Reid, Andrew A. and Andresen, Martin A., and Juneau, Alexandre},
+  Journal                  = {Substance Abuse Treatment, Prevention, and Policy},
+  Year                     = {2014},
+  Number                   = {1},
+  Volume                   = {9},
+
+  Doi                      = {10.1186/1747-597X-9-31},
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.12.01}
+}
+
 @Article{Juarez_Scott_etal_2000_CaF,
   Title                    = {Direct Simulation of Freely Rotating Cylinders in Viscous Flows by High-Order Finite Element Methods},
   Author                   = {H{\'e}ctor Ju{\'a}rez and Ridgway Scott and Ralph Metcalfe and Babak Bagheri},
@@ -48607,6 +48647,20 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Number                   = {11},
   Pages                    = {831--843},
   Volume                   = {5}
+}
+
+@Article{Kuklinski_etal_2012_CBA-CTC_PS,
+  Title                    = {Cost-benefit Analysis of {C}ommunities {T}hat {C}are Outcomes at Eighth Grade},
+  Author                   = {Kuklinski, Margaret R. and Briney, John S. and Hawkinsm J. David, and Catalano, Richard F.},
+  Journal                  = {Prevention Science},
+  Year                     = {2012},
+  Number                   = {2},
+  Pages                    = {150--161},
+  Volume                   = {13},
+
+  Doi                      = {doi:10.1007/s11121-011-0259-9},
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.12.01}
 }
 
 @Book{Kuklys_2005_BOOKAmartyaSenscapability,
@@ -60125,6 +60179,18 @@ Robinson, Lara Rachel},
   Timestamp                = {2007.04.01}
 }
 
+@TechReport{Newey-West_1986_Simple-Pos,
+  Title                    = {A Simple, Positive Semi-Definite, Heteroskedasticity and Autocorrelation Consistent Covariance Matrix},
+  Author                   = {Newey, Whitney K. and West, Kenneth D.},
+  Institution              = {National Bureau of Economic Research},
+  Year                     = {1986},
+  Month                    = {April},
+  Number                   = {55},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2016.12.06}
+}
+
 @Article{Newman_1939_Biometrika,
   Title                    = {The Distribution of Range in Samples from a Normal Population, Expressed in Terms of an Independent Estimate of Standard Deviation},
   Author                   = {Newman, D.},
@@ -65510,6 +65576,19 @@ Robinson, Lara Rachel},
   Year                     = {2010},
 
   Address                  = {Princeton and Oxford}
+}
+
+@Article{Rajgopal_etal_2002_CBA_JoNEaB,
+  Title                    = {Cost-Benefit Analysis Indicates the Positive Economic Benefits of the {Expanded Food and Nutrition Education Program} Related to Chronic Disease Prevention},
+  Author                   = {Rajgopal, Radhika, and Cox, Ruby H. and Lambur, Michael and Lewis, Edwin C.},
+  Journal                  = {Journal of Nutrition Education and Behavior},
+  Year                     = {2002},
+  Number                   = {1},
+  Pages                    = {26--37},
+  Volume                   = {34},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.12.01}
 }
 
 @Article{Raley_1996_ASR,
